--- a/_notebooks/04-collaborative-filtering-practical.ipynb
+++ b/_notebooks/04-collaborative-filtering-practical.ipynb
@@ -426,7 +426,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 732
+          "height": 1000
         },
         "id": "sk3PZxfpuK-B",
         "outputId": "eacbe950-9f62-438e-fc62-867e95f84d1f"
@@ -967,7 +967,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 732
+          "height": 1000
         },
         "id": "d2BWS81kuK-C",
         "outputId": "311f87e9-00a1-4dfc-cd8c-24d95bea5e01"
@@ -4338,7 +4338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 91,
       "metadata": {
         "id": "KNycNxXhuK-q"
       },
@@ -4574,15 +4574,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 90,
       "metadata": {
-        "id": "seaLCn4luK-v"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "seaLCn4luK-v",
+        "outputId": "ed7f4391-951a-4dcb-d654-91f7f3b3e3d1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iteration 1000, Objective function: 66.82357764844507\n",
+            "Iteration 2000, Objective function: 67.22082878610227\n",
+            "Iteration 3000, Objective function: 66.92306771748179\n",
+            "Iteration 4000, Objective function: 66.87942903921946\n",
+            "Iteration 5000, Objective function: 68.49196568919017\n",
+            "Iteration 6000, Objective function: 66.75599267985665\n",
+            "Iteration 7000, Objective function: 65.79877924230551\n",
+            "Iteration 8000, Objective function: 65.81030797207468\n",
+            "Iteration 9000, Objective function: 66.54599896904507\n",
+            "Iteration 10000, Objective function: 65.323460160886\n",
+            "Iteration 11000, Objective function: 65.31891575290564\n",
+            "Iteration 12000, Objective function: 66.2509555167095\n",
+            "Iteration 13000, Objective function: 66.83777898662586\n",
+            "Iteration 14000, Objective function: 66.30186431409335\n",
+            "Iteration 15000, Objective function: 65.01716774681756\n",
+            "Iteration 16000, Objective function: 64.88150194029438\n",
+            "Iteration 17000, Objective function: 65.99099905147511\n",
+            "Iteration 18000, Objective function: 64.87079518392602\n",
+            "Iteration 19000, Objective function: 66.03108310213985\n",
+            "Iteration 20000, Objective function: 65.0943467745085\n"
+          ]
+        }
+      ],
       "source": [
         "# Write your answer to Exercise 7 here\n",
         "\n",
+        "iterations_sgd = 20000 # Increased iterations for SGD\n",
+        "learn_rate_sgd = 0.005 # Adjusted learning rate for SGD\n",
         "\n",
+        "# Create copies of U and V for SGD\n",
+        "U_sgd = U.copy()\n",
+        "V_sgd = V.copy()\n",
+        "\n",
+        "# Convert Y to numpy array for faster random sampling\n",
+        "Y_np = Y.to_numpy()\n",
+        "\n",
+        "objective_values_sgd = []\n",
+        "print_every = 1000 # Print objective every 1000 updates\n",
+        "\n",
+        "for i in range(iterations_sgd):\n",
+        "    # Randomly sample a rating\n",
+        "    sample_idx = np.random.randint(len(Y_np))\n",
+        "    user, film, rating = Y_np[sample_idx]\n",
+        "\n",
+        "    # Get user and film vectors\n",
+        "    u_vec = U_sgd.loc[user].values\n",
+        "    v_vec = V_sgd.loc[film].values\n",
+        "\n",
+        "    # Calculate prediction and difference\n",
+        "    prediction = np.dot(u_vec, v_vec)\n",
+        "    diff = prediction - rating\n",
+        "\n",
+        "    # Update user and film vectors\n",
+        "    U_sgd.loc[user] -= learn_rate_sgd * 2 * diff * v_vec\n",
+        "    V_sgd.loc[film] -= learn_rate_sgd * 2 * diff * u_vec\n",
+        "\n",
+        "    # Monitor objective function periodically\n",
+        "    if (i + 1) % print_every == 0:\n",
+        "        obj_sgd, _, _ = objective_gradient(Y, U_sgd, V_sgd)\n",
+        "        objective_values_sgd.append(obj_sgd)\n",
+        "        print(f\"Iteration {i+1}, Objective function: {obj_sgd}\")\n",
         "\n",
         "\n"
       ],
@@ -4675,7 +4740,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dK5aFm6ZuK-x",
-        "outputId": "0acaaebd-14e7-4a59-b364-fd0cb079f0cc"
+        "outputId": "28eaa0a8-2a08-40be-f4ba-05a76dfe082d"
       },
       "outputs": [
         {
@@ -4755,8 +4820,18 @@
       "outputs": [],
       "source": [
         "# Write your answer to Exercise 8 here\n",
+        "#Use stochastic gradient descent to make a movie map for the movielens data. Plot the map of the movies when you are finished.\n",
         "\n",
+        "import plotly.express as px\n",
         "\n",
+        "# The V_sgd dataframe with films as index, coordinates in columns 0 and 1\n",
+        "fig = px.scatter(\n",
+        "    x=V_sgd[0],\n",
+        "    y=V_sgd[1],\n",
+        "    hover_name=V_sgd.index,  # Film names appear on hover\n",
+        "    title=\"Film Map Visualisation (SGD)\"\n",
+        ")\n",
+        "fig.show()\n",
         "\n",
         "\n"
       ],
@@ -4821,53 +4896,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b622bc7d"
-      },
-      "source": [],
-      "id": "b622bc7d",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ab5b4602"
-      },
-      "source": [
-        "# Task\n",
-        "Create a stochastic gradient descent version of the matrix factorization algorithm. Monitor the objective function after every 1000 updates to ensure that it is decreasing. When you have finished, plot the movie map and the user map in two dimensions. Label the plots with the name of the movie or user."
-      ],
-      "id": "ab5b4602"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "34a9781a"
-      },
-      "source": [
-        "## Implement stochastic gradient descent\n",
-        "\n",
-        "### Subtask:\n",
-        "Modify the existing optimization loop to perform stochastic gradient descent. This will involve iterating through individual ratings or small batches of ratings rather than the entire dataset in each step.\n"
-      ],
-      "id": "34a9781a"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ed4afff2"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "Implement the stochastic gradient descent loop to update the user and item matrices based on individual ratings.\n",
-        "\n"
-      ],
-      "id": "ed4afff2"
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "c6cb803c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c6cb803c",
+        "outputId": "8f446dd1-0c7a-4435-c831-8f966671f755"
       },
       "source": [
         "iterations_sgd = 20000 # Increased iterations for SGD\n",
@@ -4907,6 +4940,43 @@
         "        print(f\"Iteration {i+1}, Objective function: {obj_sgd}\")\n"
       ],
       "id": "c6cb803c",
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iteration 1000, Objective function: 66.70258521337689\n",
+            "Iteration 2000, Objective function: 65.69949034968042\n",
+            "Iteration 3000, Objective function: 65.394338370442\n",
+            "Iteration 4000, Objective function: 65.76521251109655\n",
+            "Iteration 5000, Objective function: 65.9089848659227\n",
+            "Iteration 6000, Objective function: 67.09476072338579\n",
+            "Iteration 7000, Objective function: 66.18037255061678\n",
+            "Iteration 8000, Objective function: 66.1553514923156\n",
+            "Iteration 9000, Objective function: 66.52069708734865\n",
+            "Iteration 10000, Objective function: 66.82908482192225\n",
+            "Iteration 11000, Objective function: 65.37147729718761\n",
+            "Iteration 12000, Objective function: 66.10516602872718\n",
+            "Iteration 13000, Objective function: 65.44381186441386\n",
+            "Iteration 14000, Objective function: 64.60963503236738\n",
+            "Iteration 15000, Objective function: 64.0508355386565\n",
+            "Iteration 16000, Objective function: 65.71104859574399\n",
+            "Iteration 17000, Objective function: 64.81131174448745\n",
+            "Iteration 18000, Objective function: 66.23130898790535\n",
+            "Iteration 19000, Objective function: 64.06899496538198\n",
+            "Iteration 20000, Objective function: 65.21033716199963\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ec37c888"
+      },
+      "source": [],
+      "id": "ec37c888",
       "execution_count": null,
       "outputs": []
     }
